compiler/testData/diagnostics/tests/operatorRem/warningOnExplicitModCall1_1.kt
// !API_VERSION: 1.1

fun test() {
    1.<!DEPRECATION!>mod<!>(3)
}